--- a/index.html
+++ b/index.html
@@ -23,25 +23,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Text to speech demo">
-    <title>Text to Speech Converter</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI-Powered Website</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Text to Speech Converter</h1>
-    </header>
+  <!-- Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 
-    <main>
-        <!-- Text Area where user can type -->
-        <textarea id="textInput" placeholder="Type something..."></textarea>
-        
-        <!-- Button to trigger speech conversion -->
-        <button onclick="convertTextToSpeech()">Convert to Speech</button>
-    </main>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>AI-Powered Content Generation</h1>
+    <p>Welcome to the Future of AI! We provide innovative AI solutions.</p>
+    <button class="cta-button" onclick="generateContent()">Generate Content</button>
+  </section>
 
-    <footer>
-        <p>2025 © My Voice Cloner
-        
+  <!-- AI Content Section -->
+  <section class="content-section">
+    <h2>Generated Content:</h2>
+    <div id="generated-content"></div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Your AI Website. All Rights Reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
